--- a/packages/hotspot-data-sink/package.json
+++ b/packages/hotspot-data-sink/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@helium/helius-service",
+  "name": "@helium/hotspot-data-sink",
   "private": true,
   "publishConfig": {
     "access": "public",
