--- a/tsconfig.json
+++ b/tsconfig.json
@@ -54,6 +54,9 @@
     },
     {
       "path": "./packages/hotspot-utils"
+    },
+    {
+      "path": "./packages/hotspot-data-sink"
     }
   ]
 }
